--- a/style.css
+++ b/style.css
@@ -475,3 +475,17 @@ footer p:nth-child(2){
     bottom: 35px;
     font-size: 14px;
 }
+
+.card1{
+    height: 365px;
+    width: 445px;
+    padding: 20px 35px;
+    background: #191919;
+    border-radius: 20px;
+    margin: 15px;
+    position: relative;
+    top:40%;
+    left:35%;
+    overflow: hidden;
+    text-align: center;
+}
